--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script src="./Scripts/jquery.js"></script>
 	    <script src="./Scripts/quagga.js"></script>
     <script src="./Scripts/bootstrap.js"></script>
+	 <script src="./Scripts/webrtc-adapter-latest.js"></script>
 
     <style>
 
