--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         video {
             overflow: visible !important;
         }
+		
+		
+	#bcInputView > video {
+    border-radius: 5px;
+}
 
 </style>
 </head>
@@ -98,90 +103,17 @@
 
 <script>
 
-        // global vars
+          // global vars
         var initRequest = $.Deferred();
         var arrBarcodes = [];
 
         (function () {
 
             "use strict";
-			var App = {
-						init : function() {
-							Quagga.init(this.state, function(err) {
-								if (err) {
-									console.log(err);
-									return;
-								}
-								App.checkCapabilities();
-								Quagga.start();
-								 initRequest.resolve(true);
-							});
-						},
-						checkCapabilities: function() {
-							var track = Quagga.CameraAccess.getActiveTrack();
-							var capabilities = {};
-							if (typeof track.getCapabilities === 'function') {
-								capabilities = track.getCapabilities();
-							}
-						},
-						inputMapper: {
-							inputStream: {
-								constraints: function(value){
-									if (/^(\d+)x(\d+)$/.test(value)) {
-										var values = value.split('x');
-										return {
-											width: {min: parseInt(values[0])},
-											height: {min: parseInt(values[1])}
-										};
-									}
-									return {
-										deviceId: value
-									};
-								}
-							},
-							numOfWorkers: function(value) {
-								return parseInt(value);
-							},
-							  decoder: {
-									readers: ["code_128_reader"],
-									debug: {
-										drawBoundingBox: false,
-										showFrequency: false,
-										drawScanline: false,
-										showPattern: false
-									}
-								}
-						},
-						state: {
-							inputStream: {
-								type : "LiveStream",
-								target: document.querySelector('#bcInputView'),
-								 constraints: {
-									width: 320,
-									height: 240,
-									facingMode: "environment"
-								}
-							},
-							locator: {
-								patchSize: "medium",
-								halfSample: true
-							},
-							numOfWorkers: 2,
-							frequency: 10,
-							decoder: {
-								readers : [{
-									format: "code_128_reader",
-									config: {}
-								}]
-							},
-							locate: true
-						},
-						lastResult : null
-			};
 
             $('#getBarcodeBtn').on('click', function () {
 
-                App.init();
+                initBarcode();
 
                 $.when(initRequest).done(function (success) {
                     if (success === true) {
